Fixed config, integration tests are now runanble, but AbstractPhotoalbumTest#logoutAfter does not work yet